--- a/Lab3-MueblesDeLosAlpes-war/web/clientes.xhtml
+++ b/Lab3-MueblesDeLosAlpes-war/web/clientes.xhtml
@@ -331,7 +331,7 @@
                         </f:facet>
                         <h:outputText value="#{file.tipoUsuario}"/>
                     </p:column>
-                    <p:column>
+                    <p:column style="width: 30px">
                         <f:facet name="header">
                             <h:outputText
                                 value="Eliminar"
